tests/baselines/reference/for-of46.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of46.ts(3,7): error TS2322: Type '为假' is not assignable to type '文字'.
tests/cases/conformance/es6/for-ofStatements/for-of46.ts(3,18): error TS2322: Type '""' is not assignable to type '真假'.
tests/cases/conformance/es6/for-ofStatements/for-of46.ts(3,29): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/es6/for-ofStatements/for-of46.ts (3 errors) ====
    var k: string, v: boolean;
    var map = new Map([["", true]]);
    for ([k = false, v = ""] of map) {
          ~
!!! error TS2322: Type '为假' is not assignable to type '文字'.
                     ~
!!! error TS2322: Type '""' is not assignable to type '真假'.
                                ~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
        k;
        v;
    }